openturns/1.25/_sources/auto_data_analysis/statistical_tests/plot_qqplot_graph.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/statistical_tests/plot_qqplot_graph.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_data_analysis_statistical_tests_plot_qqplot_graph.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_statistical_tests_plot_qqplot_graph.py:


Draw the QQ-Plot
================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example we are going to perform a visual goodness-of-fit test for an 1-d distribution with the QQ plot.

.. GENERATED FROM PYTHON SOURCE LINES 10-14

.. code-block:: Python

    import openturns as ot
    import openturns.viewer as viewer









.. GENERATED FROM PYTHON SOURCE LINES 15-16

Create data

.. GENERATED FROM PYTHON SOURCE LINES 16-20

.. code-block:: Python

    distribution = ot.Gumbel(0.2, 0.5)
    sample = distribution.getSample(100)
    sample.setDescription(["Sample"])








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Fit a distribution

.. GENERATED FROM PYTHON SOURCE LINES 22-24

.. code-block:: Python

    distribution = ot.GumbelFactory().build(sample)








.. GENERATED FROM PYTHON SOURCE LINES 25-26

Draw QQ plot

.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: Python

    graph = ot.VisualTest.DrawQQplot(sample, distribution)
    view = viewer.View(graph)




.. image-sg:: /auto_data_analysis/statistical_tests/images/sphx_glr_plot_qqplot_graph_001.svg
   :alt: Sample versus model QQ-plot
   :srcset: /auto_data_analysis/statistical_tests/images/sphx_glr_plot_qqplot_graph_001.svg
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 30-31

Incorrect proposition

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: Python

    graph = ot.VisualTest.DrawQQplot(sample, ot.WeibullMin())
    view = viewer.View(graph)




.. image-sg:: /auto_data_analysis/statistical_tests/images/sphx_glr_plot_qqplot_graph_002.svg
   :alt: Sample versus model QQ-plot
   :srcset: /auto_data_analysis/statistical_tests/images/sphx_glr_plot_qqplot_graph_002.svg
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 35-36

.. code-block:: Python

    viewer.View.ShowAll()








.. _sphx_glr_download_auto_data_analysis_statistical_tests_plot_qqplot_graph.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_qqplot_graph.ipynb <plot_qqplot_graph.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_qqplot_graph.py <plot_qqplot_graph.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_qqplot_graph.zip <plot_qqplot_graph.zip>`
